2012-09-16  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-spec.c(lang_specific_driver): Update for GCC-4.8.
	* lang.opt: Fix spelling of option -static-libphobos

	* d-codegen.cc(IRState::maybeExpandSpecialCall): Do not handle inp*
	and outp* port intrinsic functions.
	(IRState::maybeSetUpBuiltin): Likewise.
	(IRState::expandPortIntrinsic): Remove.

2012-09-10  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(AggLayout::doFields): Propagate volatile out of type.
	(AggLayout::addField): Likewise.
	* d-decls.cc(VarDeclaration::toSymbol): Likewise.

2012-09-06  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.h(IRState::vconvert): Don't use VIEW_CONVERT_EXPR.
	* d-glue.cc(TypeEnum::toCtype): Mark TYPE_PACKED if flag_short_enums.
	(TypeClass::toCtype): Mark TREE_ADDRESSABLE to ensure class is always
	passed in memory.

	* d-tree.def(UNSIGNED_RSHIFT_EXPR): Define new tree expression.
	(FLOAT_MOD_EXPR): Define new tree expression.
	* d-lang.cc(d_common_init_ts): New function.
	(d_write_global_declarations): Call check_global_declarations after
	finalize_compilation_unit.
	(d_gimplify_expr): Handle UNSIGNED_RSHIFT_EXPR, IASM_EXPR.
	* d-codegen.cc(IRState::arrayOpNotImplemented): New function.
	(IRState::buildOp): New function.
	(IRState::buildAssignOp): New function.
	* d-glue.cc(build_bool_binop): Remove function, mostly move to
	CmpExp::toElem.
	(build_math_op): Remove function, mostly move to IRState::buildOp.
	(build_assign_math_op): Remove function, mostly move to
	IRState::buildAssignOp.
	(BinExp::toElemBin): Remove function.
	(IdentityExp::toElem, EqualExp::toElem, CmpExp::toElem)
	(AndAndExp::toElem, OrOrExp::toElem): Clean-up, use IRState::boolOp.
	(XorExp::toElem, OrExp::toElem, AndExp::toElem, UshrExp::toElem)
	(ShrExp::toElem, ShlExp::toElem, ModExp::toElem, DivExp::toElem)
	(MulExp::toElem, MinExp::toElem, AddExp::toElem):Use
	IRState::arrayOpNotImplemented,	IRState::buildOp.
	(XorAssignExp::toElem, OrAssignExp::toElem, AndAssignExp::toElem)