@@ -1,5 +1,10 @@
 2012-09-16  Iain Buclaw  <ibuclaw@ubuntu.com>
 
+	* d-codegen.cc(IRState::isCallByAlias): New function.
+	(IRState::call): Use IRState::isCallByAlias.
+	* d-objfile.cc(ObjectFile::setupSymbolStorage): Mark
+	force_static_public symbols as public.
+
 	* d-spec.c(lang_specific_driver): Update for GCC-4.8.
 	* lang.opt: Fix spelling of option -static-libphobos
 
